getAllDataForNewspaper api added to swagger
