# api.yaml
@@ -59,16 +59,40 @@ paths:
     get:
       summary: Get all articles for all countries
       tags:
-        - Articles APIs
+        - Articles_API
       responses:
         "200":
           description: Successful response
+
+#Getting Articles info by Newspaper Name
+  /api/article/getAllArticlesByNewspaper:
+    post:
+      summary: Get all articles for a newspaper by name
+      tags:
+        - Articles_API
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                newspaperName:
+                  type: string
+              example:
+                newspaperName: "bbc.com"
+      responses:
+        "200":
+          description: Successful response
+        "500":
+          description: Internal Server Error
+
 
   /api/article/getArticlesForMonths:
     post:
       summary: Get articles from all countries for a given number of months
       tags:
-        - Articles APIs
+        - Articles_API
       requestBody:
         required: true
         content:
@@ -143,6 +167,8 @@ paths:
         "200":
           description: Successful response
 
+
+## Newspaper APIs
   # to get data for a given newspaper
   /api/newspaper/getAllDataForNewspaper:
     post:
